--- a/_modules/TermTk/TTkGui/theme.html
+++ b/_modules/TermTk/TTkGui/theme.html
@@ -326,6 +326,11 @@
     <span class="n">comboboxContentColorFocus</span>      <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffff88&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="s2">&quot;#111111&quot;</span><span class="p">)</span>
     <span class="sd">&#39;&#39;&#39;Default to **TTkColor.fg(&quot;#ffff88&quot;)+TTkColor.bg(&quot;#111111&quot;)**&#39;&#39;&#39;</span>
     <span class="n">comboboxBorderColorFocus</span>       <span class="o">=</span> <span class="n">buttonBorderColorFocus</span>
+    <span class="sd">&#39;&#39;&#39;Default to :class:`buttonBorderColorFocus`&#39;&#39;&#39;</span>
+    <span class="n">comboboxContentColorDisabled</span>  <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#888888&quot;</span><span class="p">)</span>
+    <span class="sd">&#39;&#39;&#39;Default to **TTkColor.fg(&quot;#888888&quot;)**&#39;&#39;&#39;</span>
+    <span class="n">comboboxBorderColorDisabled</span><span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#888888&quot;</span><span class="p">)</span>
+    <span class="sd">&#39;&#39;&#39;Default to **TTkColor.fg(&quot;#888888&quot;)**&#39;&#39;&#39;</span>
 
     <span class="n">checkboxContentColor</span>      <span class="o">=</span> <span class="n">buttonTextColor</span>
     <span class="sd">&#39;&#39;&#39;Default to :class:`buttonTextColor`&#39;&#39;&#39;</span>
