--- a/_modules/TermTk/TTkWidgets/TTkModelView/filetree.html
+++ b/_modules/TermTk/TTkWidgets/TTkModelView/filetree.html
@@ -203,6 +203,7 @@
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;_fileTreeWidget&#39;</span><span class="p">,</span>
                  <span class="c1"># Forwarded Methods</span>
                  <span class="s1">&#39;openPath&#39;</span><span class="p">,</span> <span class="s1">&#39;getOpenPath&#39;</span><span class="p">,</span>
+                 <span class="s1">&#39;setFilter&#39;</span><span class="p">,</span>
                  <span class="c1"># Forwarded Signals</span>
                  <span class="s1">&#39;fileClicked&#39;</span><span class="p">,</span> <span class="s1">&#39;folderClicked&#39;</span><span class="p">,</span> <span class="s1">&#39;fileDoubleClicked&#39;</span><span class="p">,</span> <span class="s1">&#39;folderDoubleClicked&#39;</span><span class="p">,</span> <span class="s1">&#39;fileActivated&#39;</span><span class="p">,</span> <span class="s1">&#39;folderActivated&#39;</span><span class="p">)</span>
 
@@ -224,7 +225,8 @@
 
         <span class="c1"># Forward Methods</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">openPath</span>            <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_fileTreeWidget</span><span class="o">.</span><span class="n">openPath</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">getOpenPath</span>         <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_fileTreeWidget</span><span class="o">.</span><span class="n">getOpenPath</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">getOpenPath</span>         <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_fileTreeWidget</span><span class="o">.</span><span class="n">getOpenPath</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">setFilter</span>           <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_fileTreeWidget</span><span class="o">.</span><span class="n">setFilter</span></div>
 </pre></div>
 
            </div>
