--- a/genindex.html
+++ b/genindex.html
@@ -209,6 +209,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.addWidget">addWidget() (TTkGridLayout method)</a>
 
       <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkLayouts.layout.html#TermTk.TTkLayouts.layout.TTkLayout.addWidget">(TTkLayout method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.addWidget">(TTkSplitter method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkLayouts.boxlayout.html#TermTk.TTkLayouts.boxlayout.TTkVBoxLayout.addWidget">(TTkVBoxLayout method)</a>
@@ -280,17 +282,31 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColor">checkboxTextColor (TTkTheme attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColorFocus">checkboxTextColorFocus (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.checkState">checkState() (TTkCheckbox method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.button.html#TermTk.TTkWidgets.button.TTkButton.clicked">clicked() (TTkButton method)</a>
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.clicked">(TTkCheckbox method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.clicked">(TTkRadioButton method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.code">code (TTkKeyEvent attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColor">comboboxBorderColor (TTkTheme attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColorDisabled">comboboxBorderColorDisabled (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColorFocus">comboboxBorderColorFocus (TTkTheme attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxContentColor">comboboxContentColor (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxContentColorDisabled">comboboxContentColorDisabled (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxContentColorFocus">comboboxContentColorFocus (TTkTheme attribute)</a>
 </li>
@@ -303,6 +319,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas.drawText">drawText() (TTkCanvas method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.dropEvent">dropEvent() (TTkTabWidget method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -405,6 +425,10 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox.keyEvent">(TTkSpinBox method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabBar.keyEvent">(TTkTabBar method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.keyEvent">(TTkTabWidget method)</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -416,6 +440,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.layout">layout() (TTkWidget method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes.LayoutItem">LayoutItem (TTkConstant.LayoutItemTypes attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.LEFT_ALIGN">LEFT_ALIGN (TTkConstant.Alignment attribute)</a>
@@ -424,10 +450,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.lineEditTextColor">lineEditTextColor (TTkTheme attribute)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.lineEditTextColorFocus">lineEditTextColorFocus (TTkTheme attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.lineEditTextColorFocus">lineEditTextColorFocus (TTkTheme attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.lineEditTextColorSelected">lineEditTextColorSelected (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.linkNameColor">linkNameColor (TTkTheme attribute)</a>
@@ -680,6 +706,8 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.mouseDragEvent">(TTkSplitter method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabButton.mouseDragEvent">(TTkTabButton method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget.mouseDragEvent">(TTkTestWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.mouseDragEvent">(TTkTreeWidget method)</a>
@@ -710,6 +738,8 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.mousePressEvent">(TTkSplitter method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabButton.mousePressEvent">(TTkTabButton method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget.mousePressEvent">(TTkTestWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidgetsizes.html#TermTk.TTkTestWidgets.testwidgetsizes.TTkTestWidgetSizes.mousePressEvent">(TTkTestWidgetSizes method)</a>
@@ -723,6 +753,8 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.button.html#TermTk.TTkWidgets.button.TTkButton.mouseReleaseEvent">(TTkButton method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabButton.mouseReleaseEvent">(TTkTabButton method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidgetsizes.html#TermTk.TTkTestWidgets.testwidgetsizes.TTkTestWidgetSizes.mouseReleaseEvent">(TTkTestWidgetSizes method)</a>
 </li>
@@ -786,6 +818,10 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.paintEvent">(TTkSplitter method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabBar.paintEvent">(TTkTabBar method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabButton.paintEvent">(TTkTabButton method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.paintEvent">(TTkTabWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget.paintEvent">(TTkTestWidget method)</a>
@@ -833,8 +869,16 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.raw">raw (TTkMouseEvent attribute)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.removeWidget">removeWidget() (TTkWidget method)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.removeWidget">removeWidget() (TTkGridLayout method)</a>
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkLayouts.layout.html#TermTk.TTkLayouts.layout.TTkLayout.removeWidget">(TTkLayout method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.removeWidget">(TTkSplitter method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.removeWidget">(TTkWidget method)</a>
+</li>
+      </ul></li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.replace">replace() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas.resize">resize() (TTkCanvas method)</a>
@@ -855,6 +899,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.listwidget.html#TermTk.TTkWidgets.listwidget.TTkListWidget.resizeEvent">(TTkListWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.resizeEvent">(TTkSplitter method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabBar.resizeEvent">(TTkTabBar method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.resizeEvent">(TTkTabWidget method)</a>
 </li>
@@ -887,10 +933,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.ShiftModifier">ShiftModifier (TTkConstant.KeyModifier attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortColumn">sortColumn() (TTkTreeWidget method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortItems">sortItems() (TTkTreeWidget method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyType.SpecialKey">SpecialKey (TTkConstant.KeyType attribute)</a>
@@ -898,6 +944,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.split">split() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.timer.html#TermTk.TTkCore.timer.TTkTimer.start">start() (TTkTimer method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.stateChanged">stateChanged() (TTkCheckbox method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.STRIKETROUGH">STRIKETROUGH (TTkColor attribute)</a>
 </li>
@@ -911,9 +959,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.draw_utf8.html#TermTk.TTkGui.draw_utf8.TTkTheme.tab">tab (TTkTheme attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.tab2spaces">tab2spaces() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.tabBorderColor">tabBorderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.tabBorderColorFocus">tabBorderColorFocus (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.tabCharPos">tabCharPos() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.tabColor">tabColor (TTkTheme attribute)</a>
 </li>
@@ -1625,6 +1677,8 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey">TTkConstant.MouseKey (class in TermTk.TTkCore.constant)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.WrapMode">TTkConstant.WrapMode (class in TermTk.TTkCore.constant)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.table.html#TermTk.TTkWidgets.Fancy.table.TTkFancyTable">TTkFancyTable (class in TermTk.TTkWidgets.Fancy.table)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.tableview.html#TermTk.TTkWidgets.Fancy.tableview.TTkFancyTableView">TTkFancyTableView (class in TermTk.TTkWidgets.Fancy.tableview)</a>
@@ -1691,6 +1745,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString">TTkString (class in TermTk.TTkCore.string)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabBar">TTkTabBar (class in TermTk.TTkWidgets.tabwidget)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabButton">TTkTabButton (class in TermTk.TTkWidgets.tabwidget)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget">TTkTabWidget (class in TermTk.TTkWidgets.tabwidget)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget">TTkTestWidget (class in TermTk.TTkTestWidgets.testwidget)</a>
@@ -1742,14 +1800,22 @@
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.scrollbar.html#TermTk.TTkWidgets.scrollbar.TTkScrollBar.wheelEvent">(TTkScrollBar method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabBar.wheelEvent">(TTkTabBar method)</a>
+</li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes.WidgetItem">WidgetItem (TTkConstant.LayoutItemTypes attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.windowBorderColor">windowBorderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.windowBorderColorFocus">windowBorderColorFocus (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.WrapMode.WordWrap">WordWrap (TTkConstant.WrapMode attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.WrapMode.WrapAnywhere">WrapAnywhere (TTkConstant.WrapMode attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.WrapMode.WrapAtWordBoundaryOrAnywhere">WrapAtWordBoundaryOrAnywhere (TTkConstant.WrapMode attribute)</a>
 </li>
   </ul></td>
 </tr></table>
