--- a/_modules/TermTk/TTkGui/draw_utf8.html
+++ b/_modules/TermTk/TTkGui/draw_utf8.html
@@ -321,7 +321,7 @@
       <span class="c1">#21  22  23  24  25  26  27  28  29  30</span>
       <span class="s1">&#39;╚&#39;</span><span class="p">,</span><span class="s1">&#39;╝&#39;</span><span class="p">,</span><span class="s1">&#39;╰&#39;</span><span class="p">,</span><span class="s1">&#39;╯&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;╒&#39;</span><span class="p">,</span><span class="s1">&#39;╕&#39;</span><span class="p">,</span><span class="s1">&#39;┴&#39;</span><span class="p">,</span><span class="s1">&#39;X&#39;</span><span class="p">,</span>
       <span class="c1">#31  32  33  34  35  36  37  38  39  40</span>
-      <span class="s1">&#39;◀&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span>
+      <span class="s1">&#39;◀&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span><span class="p">,</span><span class="s1">&#39;╿&#39;</span><span class="p">,</span><span class="s1">&#39;╽&#39;</span><span class="p">,</span><span class="s1">&#39;╼&#39;</span><span class="p">,</span><span class="s1">&#39;╾&#39;</span><span class="p">,</span><span class="s1">&#39;X&#39;</span>
     <span class="p">)</span>
     <span class="sd">&#39;&#39;&#39; Tab Examples</span>
 
