--- a/_modules/TermTk/TTkWidgets/button.html
+++ b/_modules/TermTk/TTkWidgets/button.html
@@ -278,7 +278,6 @@
             <span class="n">borderColor</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_borderColorDisabled</span>
             <span class="n">textColor</span>   <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_textColorDisabled</span>
             <span class="n">grid</span> <span class="o">=</span> <span class="n">TTkCfg</span><span class="o">.</span><span class="n">theme</span><span class="o">.</span><span class="n">buttonBoxGridDisabled</span>
-
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">_pressed</span><span class="p">:</span>
             <span class="n">borderColor</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_borderColorClicked</span>
             <span class="n">textColor</span>   <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_textColorClicked</span>
@@ -336,6 +335,20 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">clicked</span><span class="o">.</span><span class="n">emit</span><span class="p">()</span>
             <span class="k">return</span> <span class="kc">True</span>
         <span class="k">return</span> <span class="kc">False</span></div>
+
+    <span class="k">def</span> <span class="nf">color</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span>
+
+    <span class="k">def</span> <span class="nf">setColor</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">color</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span> <span class="o">=</span> <span class="n">color</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
+
+    <span class="k">def</span> <span class="nf">borderColor</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_borderColor</span>
+
+    <span class="k">def</span> <span class="nf">setBorderColor</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">color</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_borderColor</span> <span class="o">=</span> <span class="n">color</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">text</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
